--- a/secure/usr.bin/ssh/Makefile
+++ b/secure/usr.bin/ssh/Makefile
@@ -8,6 +8,8 @@ MAN=	ssh.1 ssh_config.5
 MLINKS=	ssh.1 slogin.1
 PACKAGE=	ssh
 
+WANT_CFI=	yes
+
 SRCS=	ssh.c readconf.c clientloop.c sshtty.c \
 	sshconnect.c sshconnect1.c sshconnect2.c mux.c
 
