--- a/usr.sbin/sendmail/Makefile
+++ b/usr.sbin/sendmail/Makefile
@@ -8,6 +8,8 @@ SENDMAIL_DIR=${.CURDIR}/../../contrib/sendmail
 SMDIR=	${SENDMAIL_DIR}/src
 .PATH: ${SMDIR}
 
+WANT_CFI=	yes
+
 BINDIR=	${LIBEXECDIR}/sendmail
 
 PROG=	sendmail
