HBSD: Enable CFI for hostapd
Signed-off-by:	Shawn Webb <shawn.webb@hardenedbsd.org>
Sponsored-by:	SoldierX

--- a/usr.sbin/wpa/hostapd/Makefile
+++ b/usr.sbin/wpa/hostapd/Makefile
@@ -3,6 +3,8 @@
 .include <src.opts.mk>
 .include "${.CURDIR}/../Makefile.inc"
 
+WANT_CFI=	yes
+
 .PATH.c:${HOSTAPD_DISTDIR} \
 	${WPA_DISTDIR}/src/drivers
 
