HBSD: Enable CFI for dhclient
Signed-off-by:	Shawn Webb <shawn.webb@hardenedbsd.org>
Sponsored-by:	SoldierX

--- a/sbin/dhclient/Makefile
+++ b/sbin/dhclient/Makefile
@@ -44,6 +44,8 @@ MAN=	dhclient.8 dhclient.conf.5 dhclient.leases.5 dhcp-options.5 \
 	dhclient-script.8
 LIBADD=	util
 
+WANT_CFI=	yes
+
 WARNS?=	2
 
 .if ${MK_TESTS} != "no"
