HBSD: Disable CFI for vi
Signed-off-by:	Shawn Webb <shawn.webb@hardenedbsd.org>
Sponsored-by:	SoldierX

--- a/usr.bin/vi/Makefile
+++ b/usr.bin/vi/Makefile
@@ -16,6 +16,8 @@ VIEW=	nview
 
 PROG=	nvi
 
+NOCFI=	yes
+
 CFLAGS+=	-D__REGEX_PRIVATE
 
 LINKS=	${BINDIR}/${VI} ${BINDIR}/${EX} ${BINDIR}/${VI} ${BINDIR}/${VIEW}
