--- a/usr.bin/less/Makefile
+++ b/usr.bin/less/Makefile
@@ -16,7 +16,7 @@ LINKS=	${BINDIR}/less ${BINDIR}/more \
 MLINKS=	less.1 more.1
 CLEANFILES= less.1
 
-NOCFI=	yes
+CFI_OVERRIDE=-fno-sanitize=cfi-icall
 
 .include "Makefile.common"
 .include <bsd.prog.mk>
