--- a/usr.bin/top/Makefile
+++ b/usr.bin/top/Makefile
@@ -10,7 +10,7 @@ SRCS+=	sigdesc.h top.local.h
 CFLAGS+= -DHAVE_GETOPT -DHAVE_STRERROR -DORDER
 CFLAGS+= -I${.CURDIR} -I${TOPDIR} -I.
 
-NOCFI=	yes
+CFI_OVERRIDE=-fno-sanitize=cfi-icall
 
 WARNS?=	0
 
