--- a/etc/hbsd-update.conf
+++ b/etc/hbsd-update.conf
@@ -11,7 +11,7 @@
 #     1) architecture
 #     2) branch (hardened/current/master) in reverse form
 #     3) repo (hardenedbsd)
-dnsrec="$(uname -m).clang400-import.current.hardened.hardenedbsd-playground.updates.hardenedbsd.org"
+dnsrec="$(uname -m).drm-next.current.hardened.hardenedbsd-playground.updates.hardenedbsd.org"
 
 # kernel:
 # Which kernel to install.
@@ -26,7 +26,7 @@ capath="/usr/share/keys/hbsd-update/trusted"
 # branch:
 # Which branch/tag we are pointing to. This option is only used in
 # this file for the baseurl option below.
-branch="hardened/current/clang400-import"
+branch="hardened/current/drm-next"
 
 # baseurl:
 # Where to get the update from.
